tests/types/errors/map_key_type_mismatch.mochi
let m: map<string, int> = {"a": 1}
let x = m[1]
